--- a/app/Resources/views/admin/index.html.twig
+++ b/app/Resources/views/admin/index.html.twig
@@ -6,7 +6,8 @@
     <div class="page-header">
         <h1>Administration</h1>
     </div>
-    <a class="btn btn-info pull-right" href="admin/campaign-add.html">Add</a>
+    <a class="btn btn-info pull-right" href="admin/campaign-add.html">Add Campaign</a>
+    {% if campaigns %}
     <div class="col-md-12">
         <table>
             <thead>
@@ -33,6 +34,7 @@
             </tbody>
         </table>
     </div>
+    {% endif %}
 </div> <!-- /container -->
 
 {% endblock %}
