--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="{{ asset('favicon.ico') }}">
-        <title>OTB</title>
-        
-        <link href="{{ asset('assets/bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
-        <link href="{{ asset('assets/bower_components/ammap3/ammap/ammap.css') }}" rel="stylesheet">
-        <link href="{{ asset('assets/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
-        <link href="{{ asset('assets/css/main.css') }}" rel="stylesheet">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="{{ asset('favicon.ico') }}">
+    <title>OTB</title>
 
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+      <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
 
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
+    {% block stylesheets %}
+      <link href="{{ asset('assets/bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
+      <link href="{{ asset('assets/bower_components/ammap3/ammap/ammap.css') }}" rel="stylesheet">
+      <link href="{{ asset('assets/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
+      <link href="{{ asset('assets/css/main.css') }}" rel="stylesheet">
+    {% endblock %}
+    {% block javascripts %}
+      <script src="{{ asset('assets/bower_components/jquery/dist/jquery.min.js') }}"></script>
+      <script src="{{ asset('assets/bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+      <script src="{{ asset('assets/bower_components/ammap3/ammap/ammap.js') }}"></script>
+      <script src="{{ asset('assets/bower_components/ammap3/ammap/themes/light.js') }}"></script>
+      <script src="{{ asset('assets/bower_components/moment/moment.js') }}"></script>
+      <script src="{{ asset('assets/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js') }}"></script>
+      <script src="{{ asset('assets/js/functions.js') }}"></script>
+    {% endblock %}
+  </head>
+  <body>
 
-    <!-- Static navbar -->
-    <nav class="navbar navbar-default navbar-static-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+  <!-- Static navbar -->
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
-                <a class="navbar-brand" href="#">Project name</a>
-            </div>
+        <a class="navbar-brand" href="#">Project name</a>
+      </div>
 
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Начало</a></li>
-                    <li><a href="#">За проекта</a></li>
-                    <li><a href="#">Акции</a></li>
-                    <li><a href="#">Екип</a></li>
-                    <li><a href="#">Стани доброволец</a></li>
-                    <li><a href="#">Галерия</a></li>
-                    <li><a href="#">Новини</a></li>
-                    <li><a href="#">Вход</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Начало</a></li>
+          <li><a href="#">За проекта</a></li>
+          <li><a href="#">Акции</a></li>
+          <li><a href="#">Екип</a></li>
+          <li><a href="#">Стани доброволец</a></li>
+          <li><a href="#">Галерия</a></li>
+          <li><a href="#">Новини</a></li>
+          <li><a href="#">Вход</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    {% block body %}{% endblock %}
-
-    <script src="{{ asset('assets/bower_components/jquery/dist/jquery.min.js') }}"></script>
-    <script src="{{ asset('assets/bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('assets/bower_components/ammap3/ammap/ammap.js') }}"></script>
-    <script src="{{ asset('assets/bower_components/ammap3/ammap/themes/light.js') }}"></script>
-    <script src="{{ asset('assets/bower_components/moment/moment.js') }}"></script>
-    <script src="{{ asset('assets/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js') }}"></script>
-    <script src="{{ asset('assets/js/functions.js') }}"></script>
-        {% block javascripts %}{% endblock %}
-    </body>
+  {% block body %}{% endblock %}
+  </body>
 </html>
