--- a/app/Resources/views/admin/institution-edit.html.twig
+++ b/app/Resources/views/admin/institution-edit.html.twig
@@ -12,7 +12,7 @@
         <div class="col-md-2">
             <ul class="nav nav-pills nav-stacked">
                 <li class="active"><a href="institution-edit.html">General</a></li>
-                <li><a href="institution-wishlist.html">Wish list</a></li>
+                <li><a href="{{ path('admin_wishlist_list', {'id' : institution.getId() }) }}">Wish list</a></li>
                 <li><a href="institution-needs-list.html">General needs</a></li>
                 <li><a href="institution-volunteer-list.html">Volunteer</a></li>
             </ul>
